# actix-test

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  skaffold.yaml
deploy/base/: deployment.yaml  service.yaml
deploy/overlays/lab/: ingress.yaml  kustomization.yaml
deploy/overlays/utsl/: kustomization.yaml  namespace.yaml
frontend/: .gitignore  README.md  bsconfig.json  package-lock.json  package.json  webpack.config.js
frontend/src/: App.re  Client.re  CountriesList.re  Country.re  Index.re  index.html
src/builder/: main.rs
src/server/: gql.rs  logger.rs  main.rs  mt.rs
templates/: country.html
