[package]
name = "actix-test"
version = "0.1.0"
authors = ["Nathan Hawkins <utsl@utsl.org>"]
build = "build.rs"
edition = "2018"

[dependencies]
actix = "0.8"
actix-web = "1.0.0-rc"
actix-files = "0.1.0-beta.4"
http = "0.1"
juniper = "0.12"
futures = "0.1"
lazy_static = "1.0.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_cbor = "0.8"
# serde_urlencoded = "0.5.1"

sled = "0"

slog = "2.1"
slog-async = "2.2"
slog-term = "2.3"
slog-json = "2.2"

thread-id = "3.2.0"


[build-dependencies]
vergen = "*"

[[bin]]
name = "server"
path = "src/server/main.rs"

